2008-08-22  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui-key-chooser.c: Fix copy & paste error while installing
    properties.

2008-08-18  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.23.90 ===

2008-08-18  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: Release version 2.23.90

2008-08-13  Adam Schreiber  <sadam@clemson.edu>

    * data/icons/hicolor_apps_16x16_seahorse.png (added):
    * data/icons/hicolor_apps_16x16_seahorse-preferences.png (added):
    * data/icons/hicolor_apps_22x22_seahorse.png (added):
    * data/icons/hicolor_apps_22x22_seahorse-preferences.png (added):
    * data/icons/hicolor_apps_24x24_seahorse.png (added):
    * data/icons/hicolor_apps_24x24_seahorse-preferences.png (added):
    * data/icons/hicolor_apps_32x32_seahorse.png (added):
    * data/icons/hicolor_apps_32x32_seahorse-preferences.png (added):
    * data/icons/hicolor_apps_48x48_seahorse.png (added):
    * data/icons/hicolor_apps_48x48_seahorse-preferences.png (added):
    * data/icons/Makefile.am (added):
    * data/icons/svg (added):
    * data/icons/svg/seahorse.svg (added):
    * data/icons/svg/seahorse-preferences.svg (added):
    * pixmaps/22x22/Makefile.am:
    * pixmaps/48x48/Makefile.am:
    * pixmaps/scalable/Makefile.am:
    * src/seahorse-viewer.vala:
    * data/Makefile.am:
    * configure.in:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h: Icon makeover.  Patch from Michael 
    Monreal.  Fixes bug #520114

2008-08-03  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.23.6 ===

2008-08-03  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* NEWS:
	* README: Release 2.23.6

2008-08-03  Stef Walter  <stef@memberwebs.com>

	* libseahorse/libseahorse-c.vapi:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-object.vala:
	* libseahorse/seahorse-util.c: