@@ -1,3 +1,9 @@
+2008-08-26  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-validity.c:
+    * pgp/seahorse-pgp-key-properties.c: Clear up ambiguity by adding contexts.
+    Fixes bug #549460
+
 2008-08-22  Adam Schreiber  <sadam@clemson.edu>
 
     * libcryptui/cryptui-key-chooser.c: Fix copy & paste error while installing
